inclusão do javascript

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
 </head>
+    <script>
+        window.location.href="./login.html"
+    </script>
 <body>
     
 </body>
