--- a/flexbox.html
+++ b/flexbox.html
@@ -48,6 +48,11 @@
         <span>Item 3</span>
     </div>
 
+    <div class="flex-v-center flex-h-center">
+        <span>Item 1</span>
+        <span>Item 2</span>
+        <span>Item 3</span>
+    </div>
     
 </body>
 </html>
