--- a/index.html
+++ b/index.html
@@ -11,4 +11,9 @@
 <body>
     
 </body>
+<button onclick="alert('ola mundo')">Clique aqui</button>
+<button onclick="saudacao()">Clique aqui</button>
+<button onclick="saudacao2()">Clique aqui</button>
+
+<script src="js/index.js"></script>
 </html>
