--- a/login.html
+++ b/login.html
@@ -21,6 +21,11 @@
             <input onclick="ola()" type="button" value="Entrar">
         </form>
     </div>
+
+    <button onclick="teste_alert()">clique alert</button>
+    <button onclick="teste_prompt()">clique prompt</button>
+    <button onclick="teste_confirm()">clique confirm</button>
 </body>
 <script src="js/login.js"></script>
+<script src="js/index.js"></script>
 </html>
